# polyakov-task-checker

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __main__.py  answer_checker.py  answer_parser.py  answer_updater.py  const.py
app/models/: answer.py  answer_result.py
app/models/enums/: answer_type.py
